[package]
name = "texttoepub"
version = "0.1.0"
authors = ["chengpengfei <hoolooday@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding_rs={version = "0.8.22", default-features = false, features = ["fast-gb-hanzi-encode"]}
epub-builder = "0.4.4"
rayon = "1.3"
regex = "1.3.1"
structopt = "0.3"

